add button animation, cleaning UI

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           Sometimes, for once in your life, you need a little retreat. Atime out
           if we may say... from your daily activity. Whitewater rafting offers
           you a complete peckage of fun and thriling sports activity, panoramic
-          adventure, and also a sweet escape for you, and loved ones
+          adventure, and also a sweet escape for you, and loved ones<br><br><br><br><br><br><br>
         </p>
       </div>
     </div>
