--- a/about.html
+++ b/about.html
@@ -45,25 +45,22 @@
 
         <div class="text2">
           <h1>From Passion to Work of a Soul</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, ea molestiae sapiente, explicabo, odio assumenda cupiditate ipsum aliquam iusto repudiandae non accusantium iure facilis ipsam necessitatibus. Excepturi velit facilis possimus dolor? Aliquid provident officia repellendus rerum odit placeat, excepturi sapiente
-            cum, ducimus accusamus voluptatum saepe totam architecto, consequatur inventore quibusdam?
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vul putate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit nit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit. sed diam nonummy nibh eusmod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
         </div>
       </div>
     </div>
     <!-- end container 2 -->
 
     <div class="container4">
+      <a href="#" class="a-contact">CONTACT US</a>
       <div class="page4">
-        <a href="#" class="a-contact">CONTACT US</a>
       </div>
     </div>
-
+    
+    <img class="img6" src="https://cdn.glitch.me/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2FBook%20Rafting%20ilustrasi.png?v=1636543594029" alt="rafting extreme" />
     <div class="container6">
       <div class="page6">
         <div class="image6">
-          <img class="" src="https://cdn.glitch.me/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2FBook%20Rafting%20ilustrasi.png?v=1636543594029" alt="rafting extreme" />
         </div>
         <div class="text6">
           <h1>Feel the Fun! Book Your Amazing Adventure Now!</h1>
