--- a/faq.html
+++ b/faq.html
@@ -1,165 +1,103 @@
-<html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Rafting Master</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rafting Master</title>
 
-      <link rel="stylesheet" href="faq.css" />
-      <link
-        href="https://fonts.googleapis.com/css?family=Montserrat"
-        rel="stylesheet"
-      />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&display=swap"
-        rel="stylesheet"
-      />
-      <link
-        rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
-    </head>
-    <body>
-      <header>
-        
-      </header>
-      <h1> Frequently Asked Questions </h1>
+    <link rel="stylesheet" href="faq.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  </head>
+  <body>
+
+    <header>
+      <!-- <img src="https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Forange-and-yellow-packrafts-rubber-boats-FVW54MR.jpg"> -->
+      <div class="container">
+        <nav class="navbar">
+            <div>
+              <img src="https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2FRafting%20logo.png?v=1633222339221" alt="Rafting Master"/>
+            </div>
+          <div class="navbar-items">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="rivers.html">Rivers</a></li>
+              <li><a href="faq.html">FAQ</a></li>
+            </ul>
+          </div>
+        </nav>
+        <h1>FAQ</h1>
+        </div>
+      </div>
+    </header>
+
+    <div class="content">
+      <h1 style="padding-bottom: 2%;">Frequently Asked Questions</h1>
       <div class="acc-kontainer">
         <div>
           <input type="radio" name="acc" id="acc1" checked />
-          <label for="acc1"
-            ><i class="fa fa-child"></i> Is this a good trip for kids? What are
-            the age ranges you allow?</label
-          >
+          <label for="acc1"><i class="fa fa-child"></i> Is this a good trip for kids? What are the age ranges you allow?</label>
           <div class="acc-body">
-            Absolutely this is a good trip for children of all ages. We have
-            found however that children over the age of 8 seem to enjoy it more
-            overall (And parents especially enjoy it more if their children are
-            all over 8). A common concern we get from parents is that their
-            children will be bored stuck on a boat for hours at a time.
+            Absolutely this is a good trip for children of all ages. We have found however that children over the age of 8 seem to enjoy it more overall (And parents especially enjoy it more if their children are all over 8). A common concern we get from parents is that their children will be bored stuck on a boat for hours at a time.
             Surprisingly we deal with very few bored children of any age.
             <br /><br />
-            The areas we are rafting through are some of the most beautiful in
-            the world, and you never know what you might see around any corner.
-            Not to mention the rapids which keep things very interesting. Each
-            boat also comes equipped with a guide. It has been proven that river
-            guides are unable to go for very long at all without telling
-            stories...some of which are even true!
+            The areas we are rafting through are some of the most beautiful in the world, and you never know what you might see around any corner. Not to mention the rapids which keep things very interesting. Each boat also comes equipped with a guide. It has been proven that river guides are unable to go for very long at all without
+            telling stories...some of which are even true!
           </div>
         </div>
         <div>
           <input type="radio" name="acc" id="acc2" />
-          <label for="acc2"
-            ><i class="fa fa-life-ring"></i> Is whitewater rafting safe? I don't
-            even know how to swim! Can I still come?</label
-          >
+          <label for="acc2"><i class="fa fa-life-ring"></i> Is whitewater rafting safe? I don't even know how to swim! Can I still come?</label>
           <div class="acc-body">
-            As with all adventure sports, there is an inherent and assumed
-            element of risk. To help ensure your safety, our guides are all
-            certified in Wilderness First aid and all start with at least 3
-            years of rafting experience. The most common injuries are sunburns
-            and injuries that occur on land.<br /><br />
-            Everyone on commercial rafting trips wears coast guard approved life
-            vest or personal flotation device (PFD). Many non swimmers go on
-            rafting trips and have a great time. Your guide will give you an in
-            depth and engaging safety talk before your trip begins explaining
-            what you should prepare for and do in the event that you fall out of
-            the raft.
+            As with all adventure sports, there is an inherent and assumed element of risk. To help ensure your safety, our guides are all certified in Wilderness First aid and all start with at least 3 years of rafting experience. The most common injuries are sunburns and injuries that occur on land.<br /><br />
+            Everyone on commercial rafting trips wears coast guard approved life vest or personal flotation device (PFD). Many non swimmers go on rafting trips and have a great time. Your guide will give you an in depth and engaging safety talk before your trip begins explaining what you should prepare for and do in the event that you fall
+            out of the raft.
           </div>
         </div>
         <div>
           <input type="radio" name="acc" id="acc3" />
-          <label for="acc3"
-            ><i class="fa fa-cutlery"></i> What is included in the trip?</label
-          >
+          <label for="acc3"><i class="fa fa-cutlery"></i> What is included in the trip?</label>
           <div class="acc-body">
-            We will provide all necessary camping equipment. This includes a
-            sleeping bag, foam pad, waterproof duffle bag, small waterproof day
-            bag, tent and a cot, eating utensils and camping chair. We provided
-            water and lemonade during the day. Coffee, tea and hot chocolate are
-            provided during the morning and evening hours. You may bring beer,
-            liquor and soft drinks (in reasonable amounts, 2 cans per day). You
-            may purchase these items either the night before the trip, or on
-            your way to the put-in. 3 meals per day, plus snacks
+            We will provide all necessary camping equipment. This includes a sleeping bag, foam pad, waterproof duffle bag, small waterproof day bag, tent and a cot, eating utensils and camping chair. We provided water and lemonade during the day. Coffee, tea and hot chocolate are provided during the morning and evening hours. You may bring
+            beer, liquor and soft drinks (in reasonable amounts, 2 cans per day). You may purchase these items either the night before the trip, or on your way to the put-in. 3 meals per day, plus snacks
           </div>
         </div>
         <div>
           <input type="radio" name="acc" id="acc4" />
-          <label for="acc4"
-            ><i class="fa fa-suitcase"></i> What do i need to bring?</label
-          >
+          <label for="acc4"><i class="fa fa-suitcase"></i> What do i need to bring?</label>
           <div class="acc-body">
-            The most effective way to plan for temperature and weather changes
-            in the Canyon is to be prepared for both hot & dry and cold & wet
-            Rain jacket and rain pants- do not bring ponchos Quick dry shirts
-            and shorts long sleeve cotton shirt and pants- helps keep you cooler
-            on hot days. Button down shirts provide more sun protection on the
-            neck Light Weight Cotton Pant, Nylon Pant or Sarong the best thing
-            for men to wear are swim trunks as shorts if you are cold natured,
-            bring polypropylene long underwear top and bottom Women wear swim
-            suits or quick dry underwear and sport bras as a base layer during
-            the day. <br /><br />
-            Over the base layer, wear a pair of quick dry shorts and the shirt
-            of your choice (polypropylene if you are cold, cotton if you are
-            hot). Two piece swim suits are convenient when changing or going to
-            the bathroom. hat- large brim hat offers protection from the sun
-            with a good quality strap. Sunglasses with strap socks- used for
-            hiking and to protect your feet from the sun. sandals or water
-            shoes- if not used to hiking in these, bring a pair of shoes you
-            have hiked in before camper wear: Bring something comfortable to
-            wear around camp. Cotton dresses, skirts and sarongs are all popular
-            options. Sleep wear: You might choose to sleep in your camp wear.
+            The most effective way to plan for temperature and weather changes in the Canyon is to be prepared for both hot & dry and cold & wet Rain jacket and rain pants- do not bring ponchos Quick dry shirts and shorts long sleeve cotton shirt and pants- helps keep you cooler on hot days. Button down shirts provide more sun protection on
+            the neck Light Weight Cotton Pant, Nylon Pant or Sarong the best thing for men to wear are swim trunks as shorts if you are cold natured, bring polypropylene long underwear top and bottom Women wear swim suits or quick dry underwear and sport bras as a base layer during the day. <br /><br />
+            Over the base layer, wear a pair of quick dry shorts and the shirt of your choice (polypropylene if you are cold, cotton if you are hot). Two piece swim suits are convenient when changing or going to the bathroom. hat- large brim hat offers protection from the sun with a good quality strap. Sunglasses with strap socks- used for
+            hiking and to protect your feet from the sun. sandals or water shoes- if not used to hiking in these, bring a pair of shoes you have hiked in before camper wear: Bring something comfortable to wear around camp. Cotton dresses, skirts and sarongs are all popular options. Sleep wear: You might choose to sleep in your camp wear.
             <br /><br />
-            Otherwise, you might like to bring something comfortable to sleep
-            in. water bottle small day pack for hikes moisturizing lotion
-            headlamp or flashlight moleskin waterproof sunscreen and lip balm
-            optional items: gloves fleece jacket towel bandana small pillow
-            hygiene products: toothpaste, toothbrush, tissue, nail clippers,
-            feminine hygiene products, extra eyeglasses or contacts,
-            biodegradable soap and shampoo camera equipment book, watercolors,
-            journal and pen
+            Otherwise, you might like to bring something comfortable to sleep in. water bottle small day pack for hikes moisturizing lotion headlamp or flashlight moleskin waterproof sunscreen and lip balm optional items: gloves fleece jacket towel bandana small pillow hygiene products: toothpaste, toothbrush, tissue, nail clippers,
+            feminine hygiene products, extra eyeglasses or contacts, biodegradable soap and shampoo camera equipment book, watercolors, journal and pen
           </div>
         </div>
         <div>
           <input type="radio" name="acc" id="acc5" />
-          <label for="acc5"
-            ><i class="fa fa-smile-o"></i> What is so great about whitewater
-            rafting anyway?</label
-          >
+          <label for="acc5"><i class="fa fa-smile-o"></i> What is so great about whitewater rafting anyway?</label>
           <div class="acc-body">
-            Are you kidding me! What's not great about whitewater
-            rafting!...Let's describe a common day on the river.<br /><br />
-            Arise in the soft light of the early morning after a night spent
-            sleeping under a beautiful starry sky. Have a hearty warm breakfast
-            of fresh blueberry pancakes or omelets to order, then pack your
-            things and prepare for the day. The day is filled with some
-            combination of swift water, rapids, calms, hikes, history, geology,
-            stories, and more good food. We try to hit camp around 4 or 5, after
-            setting up your cot you can relax with a good book or good company
-            by the river, or explore around camp while your guides prepare your
-            dinner...something perhaps like steak and potatoes, or grilled
-            salmon...and dutch oven brownies...you won't forget the dutch oven
-            brownies. <br /><br />
-            After dinner it's more relaxing, and you might even be able to talk
-            your guide into another story or two to send you off to bed under
-            more stars than you thought were possible.
+            Are you kidding me! What's not great about whitewater rafting!...Let's describe a common day on the river.<br /><br />
+            Arise in the soft light of the early morning after a night spent sleeping under a beautiful starry sky. Have a hearty warm breakfast of fresh blueberry pancakes or omelets to order, then pack your things and prepare for the day. The day is filled with some combination of swift water, rapids, calms, hikes, history, geology,
+            stories, and more good food. We try to hit camp around 4 or 5, after setting up your cot you can relax with a good book or good company by the river, or explore around camp while your guides prepare your dinner...something perhaps like steak and potatoes, or grilled salmon...and dutch oven brownies...you won't forget the dutch
+            oven brownies. <br /><br />
+            After dinner it's more relaxing, and you might even be able to talk your guide into another story or two to send you off to bed under more stars than you thought were possible.
           </div>
         </div>
         <div>
           <input type="radio" name="acc" id="acc6" />
-          <label for="acc6"
-            ><i class="fa fa-book"></i> How far in advance should i book my
-            trip?</label
-          >
-          <div class="acc-body">
-            If you have specific dates you need, we recommend booking a year in
-            advance. If you can be more flexible 6 months in advance is usually
-            sufficient
-          </div>
+          <label for="acc6"><i class="fa fa-book"></i> How far in advance should i book my trip?</label>
+          <div class="acc-body">If you have specific dates you need, we recommend booking a year in advance. If you can be more flexible 6 months in advance is usually sufficient</div>
         </div>
       </div>
-    <div class="container5" background-color:"white";>
+    </div>
+
+    <div class="footer">
+      <div class="container5">
       <footer>
         <div>
           <img src="https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2FRafting%20logo.png?v=1633222339221" alt="Rafting Master Logo" />
@@ -187,7 +125,6 @@
         </div>
       </footer>
     </div>
-    <!-- container5 -->
 
     <div class="contact">
       <div class="container6">
@@ -196,13 +133,12 @@
         <svg aria-hidden="true" width="30" height="30" focusable="false" data-prefix="fab" data-icon="twitter" class="svg-inline--fa fa-twitter fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="white" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg>
         <svg aria-hidden="true" width="30" height="30" focusable="false" data-prefix="fab" data-icon="youtube" class="svg-inline--fa fa-youtube fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="white" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path></svg>
         <svg aria-hidden="true" width="30" height="30" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="white" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
-
       </div>
     </div>
 
     <div class="copy">
       <p>&copy; Copyright 2021 Rafting Master</p>
     </div>
-    </body>
-  </html>
+    </div>
+  </body>
 </html>
