--- a/index.html
+++ b/index.html
@@ -32,31 +32,25 @@
           </div>
         </nav>
         <h1>Nature is Calling You</h1>
-
-        <div class="text1">
-          <p>
-            The biggest adventure in your life Awaits you! Rafting Master's
-            Breathtaking secret spots will spoil your soul! Join Our Journey now!
-          </p>
+        <div class="textpembuka">
+          <p>The Biggest Advanced in your life Awaits you! Rafting Master's Brogthtaking secrest spots Willl spoll your soult Join, Our Jurney now!</p>
         </div>
       </div>
+    </div>
     </header>
     <!-- container -->
 
-    <div class="container2">
-      <div class="page1">
+    
+    <div class="page1">
         <h1>Your Greatest Escapade</h1>
-        <br>
-        <br>
         <p>
           Sometimes, for once in your life, you need a little retreat. Atime out
           if we may say... from your daily activity. Whitewater rafting offers
           you a complete peckage of fun and thriling sports activity, panoramic
           adventure, and also a sweet escape for you, and loved ones
         </p>
-        <br>
-        <br>
       </div>
+    <div class="container2">
     </div>
     <!-- container2 -->
 
